[adding nusdast data]

--- a/slot3_RehakBuckova/Long_NM_protocol.ipynb
+++ b/slot3_RehakBuckova/Long_NM_protocol.ipynb
@@ -192,13 +192,15 @@
     "\n",
     "Initially, this tutorial follows the [BLR_normativemodel_protocol](https://github.com/predictive-clinical-neuroscience/PCNtoolkit-demo/tree/main/tutorials/BLR_protocol)\n",
     "\n",
-    "- the healthy control groups has to be split into two parts\n",
-    "    - the first part ensures the pre-trained model is well-adjusted for your scanning site\n",
-    "    - the second part is used to compute the healthy variation in controls\n",
+    "- The healthy control groups have to be split into two parts\n",
+    "    - The first part ensures the pre-trained model is well-adjusted for your scanning site.\n",
+    "    - The second part is used to compute the healthy variation in controls.\n",
     "\n",
     "Alternatively, if you don't have enough controls, you can  drop the site-adjustment step, however, **you then can not interpret the cross-sectional results!**\n",
     "\n",
-    "- for more details on this, see our [paper](https://www.biorxiv.org/content/10.1101/2023.06.09.544217v1)"
+    "- For more details on this, see our [paper](https://elifesciences.org/reviewed-preprints/95823).\n",
+    "\n",
+    "- Finally, if you have a spare set of crss-sectional controls, you can use those for the site adaptation."
    ]
   },
   {
@@ -342,7 +344,7 @@
     "            ###\n",
     "            # Save sitenum\n",
     "            ###\n",
-    "            # Adatation control data\n",
+    "            # Adaptation control data\n",
     "            np.savetxt(os.path.join(idp_visit_dir, 'sitenum_controls_adjust.txt'), df_controls_adjust['sitenum'].to_numpy())\n",
     "            # Test control data\n",
     "            np.savetxt(os.path.join(idp_visit_dir, 'sitenum_controls_test.txt'), df_controls_test['sitenum'].to_numpy())\n",
@@ -572,7 +574,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "put everything into a nice xarray structure, so that it's easy to navigate"
+    "Put everything into a nice xarray structure, so that it's easy to navigate\n",
+    "- for more details on the xarray package, see: https://docs.xarray.dev/en/stable/index.html"
    ]
   },
   {
@@ -648,7 +651,10 @@
    "source": [
     "1) First, we compute the variation in healthy controls\n",
     "2) Then we substract the two visits in patients\n",
-    "3) Finally, compute the zdiff score"
+    "3) Finally, compute the zdiff score\n",
+    "\n",
+    "- Why do we need this? A simple substraction of cross-sectional z-scores is not interpretable on an individual level as a z-score\n",
+    "- Additionally, it doesn't control for the dynamics between the visits"
    ]
   },
   {
