--- a/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
+++ b/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
@@ -5,9 +5,9 @@
    "id": "8d09a59a-310b-4565-95f5-1f3e9721fdec",
    "metadata": {},
    "source": [
-    "# Normative modelling as site effect correction tool\n",
+    "# Normative modelling as a site effect correction tool\n",
     "\n",
-    "This tutorial will walk you through the application of normative modelling as site effect correction tool.\n",
+    "This tutorial will walk you through the application of normative modelling as a site effect correction tool.\n",
     "\n",
     "You will learn:\n",
     "- How to fit a normative model to data from different sites.\n",
@@ -21,20 +21,41 @@
    "id": "7aaac9b3-3ad6-47ee-a06f-528f7a0c0aae",
    "metadata": {},
    "source": [
-    "# Quick recap: normative models using the pcn toolkit\n",
+    "# Quick recap: normative modelling using the pcn toolkit\n",
     "A normative model requires three input variables:\n",
     "- covariates (the X axis, ususally age)\n",
     "- response variables (usually one or several brain feature measurements)\n",
     "- a batch effect file. Batch effects can be anything that interferes with the covrariate (sex, site)\n",
     "\n",
-    "While the blr model reuiqres input of the batch effects via a design matrix, the implementation of the hbr only reuires a file."
+    "While the Bayesian Linear Model (blr) requires input of the batch effects via a design matrix, the implementation of the hierarchical Bayesian model (HBR) only requires a text file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc0364e4-ac5b-4f19-8aef-3c7b5b7d7077",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Install the toolkit\n",
+    "!pip install pcntoolkit"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c5248840-9b00-4820-8593-85d9d7ad4513",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Import relevant libraries\n",
@@ -54,7 +75,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "bd2530d9-bb2a-48b6-ad79-fc01842953db",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# a simple function to quickly load pickle files\n",
@@ -68,6 +94,10 @@
    "execution_count": 2,
    "id": "f9c07f21-42ea-4645-b701-ef9c028098c6",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [
@@ -88,7 +118,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "103186c8-97aa-49e4-a6d1-72daac14d89c",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# create working dir\n",
@@ -99,7 +134,12 @@
    "cell_type": "code",
    "execution_count": 106,
    "id": "1c8f2874-4006-4703-ad49-17ff3f0c20b1",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -117,7 +157,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "3ae41f1b-5a89-4e6a-b65f-38f09510cd0d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "processing_folder = \"Site_effect_tutorial/\""
@@ -127,7 +172,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6a33d09a-63f4-48b0-b609-ecdbbccba52f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "if not os.path.isdir(processing_folder):\n",
@@ -138,7 +188,12 @@
    "cell_type": "code",
    "execution_count": 104,
    "id": "77debe6f-3a1f-4f8f-9d99-99a6dba6718c",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -152,16 +207,6 @@
     "os.chdir(processing_folder)\n",
     "processing_dir = os.getcwd()\n",
     "print(f\"The processing directory is: {processing_dir}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "id": "3a8012cd-d057-49e4-bedc-40bf92765ae8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "processing_dir = '/Users/johbay/Dropbox/OHBM2024/educational-course/Site_effect_tutorial/'"
    ]
   },
   {
@@ -180,7 +225,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b08aa693-1a88-416e-8012-ce3d1ca008dc",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Load the data\n",
@@ -192,7 +242,12 @@
    "cell_type": "code",
    "execution_count": 63,
    "id": "19c3837b-b424-48a2-8416-1505f50c845b",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Load the test data into the notebook\n",
@@ -207,7 +262,12 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "179a2cc6-721d-4a41-b5c7-6577715ab522",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Load the training data into the notebook\n",
@@ -234,7 +294,12 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "37856974-a5c2-4e9c-abd2-aab2338071c2",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -272,7 +337,12 @@
    "cell_type": "code",
    "execution_count": 67,
    "id": "7f08ae6f-90c2-4bba-9d81-4c46c1486be7",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -318,7 +388,12 @@
    "cell_type": "code",
    "execution_count": 68,
    "id": "4d410c87-a944-4294-bada-39db20a6a92a",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -478,7 +553,12 @@
    "cell_type": "code",
    "execution_count": 69,
    "id": "44d05f5c-a9c0-427a-a673-88e7f1d1435d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -647,7 +727,12 @@
    "cell_type": "code",
    "execution_count": 70,
    "id": "102a0979-6606-47b4-aebd-c6e16516f14f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Save some sites for later, these are going to be my new sites\n",
@@ -659,7 +744,12 @@
    "cell_type": "code",
    "execution_count": 71,
    "id": "7472388f-fa1c-4c14-a712-7d935ad3ef9d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -681,7 +771,12 @@
    "cell_type": "code",
    "execution_count": 72,
    "id": "e55a4ccb-5d2e-40c4-8c84-8c1c926bb105",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -718,7 +813,12 @@
    "cell_type": "code",
    "execution_count": 73,
    "id": "195228da-3046-411d-872b-a0f6e2b2fa65",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Select the IDPs (columns) of interest from the data frame\n",
@@ -729,7 +829,12 @@
    "cell_type": "code",
    "execution_count": 74,
    "id": "24a59ef4-3a45-4467-88ba-c8cd87e034c1",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Prepare the data frames for training and testing\n",
@@ -764,7 +869,12 @@
    "cell_type": "code",
    "execution_count": 75,
    "id": "6dafbcac-9518-4a0b-8efb-85c8be440328",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# The model requires the paths to the data. We reate them here.\n",
@@ -885,7 +995,12 @@
    "cell_type": "code",
    "execution_count": 103,
    "id": "1aff2cc7-8102-4157-be8f-b915da827955",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -943,7 +1058,12 @@
    "cell_type": "code",
    "execution_count": 108,
    "id": "6b94234b-fc23-4c6c-89f0-add4a1f54cc2",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# load the estimated model for the first IDP (column). \n",
@@ -954,7 +1074,12 @@
    "cell_type": "code",
    "execution_count": 79,
    "id": "f00434b7-b388-4019-aa4f-1dd7f0fb2eec",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1206,7 +1331,12 @@
    "cell_type": "code",
    "execution_count": 118,
    "id": "fb7585f5-200e-4481-94dd-d793b78bd409",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# create dummy zscores\n",
@@ -1228,7 +1358,12 @@
    "cell_type": "code",
    "execution_count": 119,
    "id": "84fdf51d-7074-49c6-8aa2-f44a585e0e84",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1276,7 +1411,12 @@
    "cell_type": "code",
    "execution_count": 120,
    "id": "2086050b-27e1-49d6-9385-a3ada654be82",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1343,7 +1483,12 @@
    "cell_type": "code",
    "execution_count": 121,
    "id": "14a893a6-4b23-4cf9-b1ab-141587abe169",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Select individuals from site 7\n",
@@ -1372,7 +1517,12 @@
    "cell_type": "code",
    "execution_count": 122,
    "id": "4d7169a1-0ede-41c4-82ed-4dc722c5411c",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1717,7 +1867,12 @@
    "cell_type": "code",
    "execution_count": 85,
    "id": "91d28ae8-d537-4489-815f-c09924beb68e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "yhat_Xtest7in8 = ldpkl(os.path.join(processing_dir, \"yhat_Xtest7in8.pkl\"))\n",
@@ -1728,7 +1883,12 @@
    "cell_type": "code",
    "execution_count": 86,
    "id": "9e9cf6f0-b37e-48ab-a6c6-5e746c33fd9e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# We also load the original z-scores.\n",
@@ -1739,7 +1899,12 @@
    "cell_type": "code",
    "execution_count": 87,
    "id": "dc45afe6-3ad4-460a-8b75-3f38aaf05f67",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1774,7 +1939,12 @@
    "cell_type": "code",
    "execution_count": 88,
    "id": "66f5c7cf-e3e8-4c91-a022-bdab3e9ded20",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Make the back transformation\n",
@@ -1785,7 +1955,12 @@
    "cell_type": "code",
    "execution_count": 89,
    "id": "4b93c234-f73f-4069-b988-3a1c264efe68",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -1796,7 +1971,12 @@
    "cell_type": "code",
    "execution_count": 90,
    "id": "b9f978c0-1e2a-48fb-907f-be63e4683d4f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1855,7 +2035,12 @@
    "cell_type": "code",
    "execution_count": 91,
    "id": "99c9a0f7-3af0-4e0b-b293-db8c7a2c575d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Create a new folder for the transfer models and create directory.\n",
@@ -1867,7 +2052,12 @@
    "cell_type": "code",
    "execution_count": 92,
    "id": "609143a4-402a-4e84-90e0-6747ce9e68ae",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Load the hold out data.\n",
@@ -1885,7 +2075,12 @@
    "cell_type": "code",
    "execution_count": 93,
    "id": "a585fae1-7172-495c-9eb1-e201d2cbe0be",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1910,7 +2105,12 @@
    "cell_type": "code",
    "execution_count": 94,
    "id": "87fc13f1-22d5-4bbe-9334-79e02cec33bc",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# save the dataframes\n",
@@ -1935,7 +2135,12 @@
    "cell_type": "code",
    "execution_count": 95,
    "id": "1c5beba3-80fd-4b75-b9f3-b270da84c04c",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1994,7 +2199,12 @@
    "cell_type": "code",
    "execution_count": 96,
    "id": "36ffcc01-5eef-4339-ab75-4bb3427e4c2d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2235,7 +2445,12 @@
    "cell_type": "code",
    "execution_count": 97,
    "id": "746bcaed-6b92-42c1-aafe-349d24a051d7",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2344,7 +2559,12 @@
    "cell_type": "code",
    "execution_count": 99,
    "id": "d421144e-c766-47cb-b7e1-1b809394b63b",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# create dummy zscores\n",
@@ -2366,7 +2586,12 @@
    "cell_type": "code",
    "execution_count": 100,
    "id": "fb808c06-99e0-475f-9e63-09a4330a7e13",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "nm_transfer1 = ldpkl(os.path.join(txfer_output_path, 'NM_0_0_transfer1.pkl'))"
@@ -2376,7 +2601,12 @@
    "cell_type": "code",
    "execution_count": 101,
    "id": "d986a111-1b52-44d1-85c4-a54478487bf1",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -2424,7 +2654,12 @@
    "cell_type": "code",
    "execution_count": 123,
    "id": "ab681fa9-913e-4a6e-8a46-46b4d55ff300",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2467,7 +2702,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8fc9f9b0-f105-46ad-8059-383154fbd6e5",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   }
