--- a/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
+++ b/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
@@ -251,7 +251,7 @@
    "outputs": [],
    "source": [
     "# Load the test data into the notebook\n",
-    "test_data = os.path.join(root_dir, 'fcon1000_te.csv')\n",
+    "test_data = os.path.join(processing_dir, 'fcon1000_te.csv')\n",
     "df_te = pd.read_csv(test_data, index_col=0)\n",
     "\n",
     "# extract a list of unique site ids from the test set\n",
@@ -271,7 +271,7 @@
    "outputs": [],
    "source": [
     "# Load the training data into the notebook\n",
-    "train_data = os.path.join(root_dir, 'fcon1000_tr.csv')\n",
+    "train_data = os.path.join(processing_dir, 'fcon1000_tr.csv')\n",
     "\n",
     "df_tr = pd.read_csv(train_data, index_col=0)\n",
     "\n",
@@ -381,7 +381,7 @@
     "for i,s in enumerate(sites):\n",
     "    idx = df_tr['site'] == s\n",
     "    idxte = df_te['site'] == s\n",
-    "    print(i,s, sum(idx), sum(idxte))\n"
+    "    print(i,s, sum(idx), sum(idxte))"
    ]
   },
   {
@@ -1324,7 +1324,13 @@
    "source": [
     "## Case 1a: Plot the results for one site.\n",
     "\n",
-    "The results yield predictions for all 20 sites. However, let's plot just now the results and centiles for site 8."
+    "The results yield predictions for all 20 sites. However, let's plot just now the results and centiles for site id 8 (Cleveland).\n",
+    "\n",
+    "We can use the get_mcmc_quantiles function inherent in the normative model object for that.\n",
+    "This function requires:\n",
+    "- a desired range of z-scores that the quantiles should cover\n",
+    "- a desired X-axis vector (for example, from 20 years - 80 years)\n",
+    "- a batch effect vector containing the desired batch effects to plot\n"
    ]
   },
   {
@@ -1347,11 +1353,19 @@
     "# Create sythetic X achsis\n",
     "n_synthetic_samples = 200\n",
     "synthetic_X = np.linspace(0.15, 0.85, n_synthetic_samples)[:,np.newaxis]\n",
-    "# choose type of site effect by cerating intercept offset (or not)\n",
+    "# choose type of site effect by cerating intercept offset (or not). We choose gender 0 and site 8.\n",
     "be = np.zeros((n_synthetic_samples,2))\n",
     "sevens = np.ones((n_synthetic_samples,1))*8\n",
     "be[:,0] = sevens[:,0]\n",
     "be=be.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b9edc17-37c0-4012-8622-2f2a3319c19e",
+   "metadata": {},
+   "source": [
+    "Get the quantiles."
    ]
   },
   {
@@ -1442,6 +1456,8 @@
    "source": [
     "# Plot the original training set data points (site 0) into the centiles\n",
     "plt.scatter(X_test[batch_effects_test[:,0]==8], Y_test[batch_effects_test[:,0]==8, 0])\n",
+    "# Note: for illustrative reasons, we plot both gender 0 and 1 onto the centiles for gender 0. In a real analysis, one would probably \n",
+    "# make one plot per gender.\n",
     "for i, v in enumerate(zscores):\n",
     "    thickness = 1\n",
     "    linestyle = \"-\"\n",
@@ -1451,7 +1467,7 @@
     "        linestyle = \"--\"\n",
     "    plt.plot(synthetic_X, q[i], linewidth = thickness, linestyle = linestyle, color = 'black', alpha = 0.7)\n",
     "\n",
-    "plt.title('site ' + str(be[0]))"
+    "plt.title('site ' + str(be[0,0]))"
    ]
   },
   {
@@ -1459,7 +1475,7 @@
    "id": "496923cb-72d2-4fa9-8122-d02693e91b05",
    "metadata": {},
    "source": [
-    "## Case 1b: Add data points from site 7 into the quantile plot of site 8.\n",
+    "## Case 1b: Add data points from site 7 (Cambridge_Buckner) into the quantile plot of site 8 (Cleveland).\n",
     "\n",
     "1. Create a forward prediction for the covariate combination of each individual of site 7 for site 8.\n",
     "2. Use yhat and s2 to invert z score for those individuals.\n",
@@ -1473,10 +1489,7 @@
     "\n",
     "$z_7 = \\frac{\\hat{y}_8 - y}{s_8}$\n",
     "\n",
-    "$z_7 * s_8 - \\hat{y_8} = -y$\n",
-    "\n",
-    "\n",
-    "\n"
+    "$z_7 * s_8 - \\hat{y_8} = -y$"
    ]
   },
   {
@@ -1492,24 +1505,26 @@
    "outputs": [],
    "source": [
     "# Select individuals from site 7\n",
-    "\n",
     "X_test_7=X_test[batch_effects_test[:,0]==7]\n",
     "n_synthetic_samples = sum(batch_effects_test[:,0]==7)\n",
     "\n",
-    "# Create a batch effect file for forward predictions in site 8. We hence select 8 as batch effect ID.\n",
+    "# Create a batch effect file for forward predictions in site 8. We hence select 8 as batch effect ID. \n",
+    "# We choose gender 0 and site 8.\n",
     "be = np.zeros((n_synthetic_samples,2))\n",
     "eights = np.ones((n_synthetic_samples,1))*8\n",
     "be[:,0] = eights[:,0]\n",
     "be=be.astype(int)\n",
     "\n",
+    "# save individuals and create path\n",
     "with open('X_test_7_in_8.pkl', 'wb') as file:\n",
     "    pickle.dump(pd.DataFrame(X_test_7), file)\n",
-    "\n",
+    "    \n",
     "X_test_7_path = os.path.join(processing_dir, 'X_test_7_in_8.pkl')\n",
     "\n",
+    "#save batch effect and create path\n",
     "with open('be_8.pkl', 'wb') as file:\n",
     "    pickle.dump(pd.DataFrame(be), file)\n",
-    "\n",
+    "    \n",
     "be_8_path = os.path.join(processing_dir, 'be_8.pkl')"
    ]
   },
@@ -1955,16 +1970,18 @@
    "cell_type": "code",
    "execution_count": 89,
    "id": "4b93c234-f73f-4069-b988-3a1c264efe68",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "y_adj = y_adj * (-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c32be6f-4b12-475a-a33d-28a7bb77d4ce",
+   "metadata": {},
+   "source": [
+    "We now create a plot that contains the transfromed data from site 7, the original data from site 8 and the centiles from site 8."
    ]
   },
   {
@@ -2000,10 +2017,11 @@
     }
    ],
    "source": [
-    "# Plot the transformed data\n",
+    "# Plot the transformed data from site 7,  the original data from site 8 and the centiles from site 8.\n",
     "\n",
     "plt.scatter(X_test[batch_effects_test[:,0]==8], Y_test[batch_effects_test[:,0]==8, 0])\n",
     "plt.scatter(X_test[batch_effects_test[:,0]==7], y_adj)\n",
+    "# plot centiles\n",
     "for i, v in enumerate(zscores):\n",
     "    thickness = 1\n",
     "    linestyle = \"-\"\n",
@@ -2028,7 +2046,11 @@
    "source": [
     "## Case 2: Transter model: Make predictions/adjustments for unseen sites.\n",
     "\n",
-    "The transfer works best with an adaptation data set. We are going to use the held-out training data set for that."
+    "The transfer requires an adaptation (training) and a test data set. We are going to use the held-out training data set for that.\n",
+    "\n",
+    "The trainsfer model works in two stages: \n",
+    "1. The adaptation data set is used to refit the model with priors derived from the previous model\n",
+    "2. Predictions and evalations are made for the hold-out test data."
    ]
   },
   {
@@ -2061,7 +2083,6 @@
    "outputs": [],
    "source": [
     "# Load the hold out data.\n",
-    "\n",
     "X_adapt = (new_sites_tr['age']/100).to_numpy(dtype=float)\n",
     "Y_adapt = new_sites_tr[idps].to_numpy(dtype=float)\n",
     "batch_effects_adapt = new_sites_tr[['sitenum','sex']].to_numpy(dtype=int)\n",
@@ -2193,6 +2214,16 @@
    "source": [
     "# Let's have a look at the batch effect IDs.\n",
     "batch_effects_adapt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a17a10a-3ee0-4486-a596-950f6ddb2dfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Run the transfer"
    ]
   },
   {
@@ -2557,6 +2588,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "209e5dd3-d5ee-4b8f-8648-30aa92c42306",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Again, we create dummy data to use the get_mcmc_quantiles function."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 99,
    "id": "d421144e-c766-47cb-b7e1-1b809394b63b",
    "metadata": {
@@ -2575,7 +2616,7 @@
     "# Create sythetic X achsis\n",
     "n_synthetic_samples = 200\n",
     "synthetic_X = np.linspace(0.15, 0.85, n_synthetic_samples)[:,np.newaxis]\n",
-    "# choose type of site effect by cerating intercept offset (or not)\n",
+    "# choose type of site effect by cerating intercept offset (or not).  We choose gender 0 and site 21.\n",
     "be = np.zeros((n_synthetic_samples,2))\n",
     "twenties = np.ones((n_synthetic_samples,1))*21\n",
     "be[:,0] = twenties[:,0]\n",
@@ -2684,8 +2725,8 @@
    ],
    "source": [
     "# Plot the data onto the centiles obtained from the transfer model\n",
-    "\n",
     "plt.scatter(X_test_txfr[batch_effects_test_txfr[:,0]==21], Y_test_txfr[(batch_effects_test_txfr[:,0]==21),0])\n",
+    "# Note: we are again plotting both genders. In a real analysis example, one might want to create two plots, one for each gender.\n",
     "for i, v in enumerate(zscores):\n",
     "    thickness = 1\n",
     "    linestyle = \"-\"\n",
