change one cell to markdown

--- a/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
+++ b/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
@@ -918,13 +918,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a17a10a-3ee0-4486-a596-950f6ddb2dfa",
+   "cell_type": "markdown",
+   "id": "fb677807-fba9-481b-80a0-fb33fd5f589d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Run the transfer"
+    "## Run the transfer\n",
+    "\n",
+    "We now run the transfer. We do that in a loop, running over all (two) idps we have selected."
    ]
   },
   {
@@ -999,11 +999,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "209e5dd3-d5ee-4b8f-8648-30aa92c42306",
+   "cell_type": "markdown",
+   "id": "8ffe8a2e-14ca-4f6a-bed1-19d521b6b288",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Again, we create dummy data to use the get_mcmc_quantiles function."
    ]
@@ -1037,6 +1035,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the transfer model. Make sure to choose the transfer path.\n",
     "nm_transfer1 = ldpkl(os.path.join(txfer_output_path, 'NM_0_0_transfer1.pkl'))"
    ]
   },
