--- a/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
+++ b/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
@@ -27,7 +27,7 @@
     "- response variables (usually one or several brain feature measurements)\n",
     "- a batch effect file. Batch effects can be anything that interferes with the covrariate (sex, site)\n",
     "\n",
-    "While the Bayesian Linear Model (blr) requires input of the batch effects via a design matrix, the implementation of the hierarchical Bayesian model (HBR) only requires a text file."
+    "While the Bayesian Linear Regression (BLR) model requires input of the batch effects via a design matrix, the implementation of the Hierarchical Bayesian Regression (HBR) model only requires a text file (vector) - the design matrix is created internally."
    ]
   },
   {
@@ -146,11 +146,11 @@
    "id": "4639454a-4bc9-4b23-bed1-7baadfb9f3b5",
    "metadata": {},
    "source": [
-    "# 01. Data pre-processing.\n",
+    "# Step 1: Data pre-processing.\n",
     "\n",
-    "### Load the data\n",
+    "### 1.1 Load the data.\n",
     "\n",
-    "For this tutorial, we use publicly availabe data that has been pooled from various data sets."
+    "For this tutorial, we use publicly availabe data that has been pooled from various data sets. The data have alrrady been conveniently split into training and test set."
    ]
   },
   {
@@ -204,7 +204,7 @@
    "id": "ce0374f4-58a1-41ee-b8fc-9a8202152b5c",
    "metadata": {},
    "source": [
-    "### Visual inspection of data."
+    "## 1.2 Visual inspection of the data."
    ]
   },
   {
@@ -285,7 +285,7 @@
    "id": "21e32cf1-b2c0-4fea-beec-d3034d933086",
    "metadata": {},
    "source": [
-    "### Set aside hold-out transfer sites.\n",
+    "## 1.3 Setting aside of hold-out transfer sites.\n",
     "For our site transfer later we want to exclude some sites from the training and test set for later. We choose the SaintLois and the COBRE site and remove them from the training and test set. We summarize those sites in a `new_sites_tr` and `new_sites_te` variable."
    ]
   },
@@ -333,7 +333,7 @@
    "id": "b3dce878-c4bb-4855-b4d0-40c28a95ee8c",
    "metadata": {},
    "source": [
-    "# Selecting brain variables (independently derived phenotypes, IDPs).\n",
+    "## 1.4 Selecting brain variables (independently derived phenotypes, IDPs).\n",
     "\n",
     "Our data set contains 223 columns (phenotypes). We select two phenotypes for modelling. "
    ]
@@ -418,7 +418,7 @@
    "id": "bcff7978-0dbf-41b8-8b83-fa17eed41e55",
    "metadata": {},
    "source": [
-    "# 02. Normative modelling\n",
+    "# Step 2: Normative modelling\n",
     "\n",
     "\n",
     "## Case 1: Training a normative model on different sites to make predictions on the same sites (equal distribution of sites in training and test data)\n",
@@ -426,8 +426,7 @@
     "\n",
     "Use: Hierarchical Bayesian model (HBR)\n",
     "\n",
-    "HBR multi-batch normative modelling class. By default, this function\n",
-    "        estimates a linear model with random intercept, random slope, and random homoscedastic noise.\n",
+    "HBR multi-batch normative modelling class. By default, this function estimates a linear model with random intercept, random slope, and random homoscedastic noise.\n",
     "   \n",
     "    :param X: [N×P] array of clinical covariates\n",
     "    :param y: [N×1] array of neuroimaging measures\n",
@@ -488,11 +487,11 @@
    "id": "78fa3835-d8f5-41f8-afe9-e548e3e963c5",
    "metadata": {},
    "source": [
-    "# Selecting the model\n",
+    "## Case 1: Selecting the model\n",
     "\n",
-    "The model framework for this tutorial is the hierarchial Bayesian model (hbr).\n",
+    "The model framework for this tutorial is the hierarchial Bayesian Regression model (HBR).\n",
     "\n",
-    "We decide for our model that we want the mean and the variance to vary with the covariate (linear_mu and linear_sigma, respectively). We choose a non-linear function for $\\phi$ given the non-linear change of age with some brain variables. We choose a b-splibe basis expansion.\n",
+    "We decide for our model that we want the mean and the variance to vary with the covariate (linear_mu and linear_sigma, respectively). We choose a non-linear function for $\\phi$ given the non-linear change of age with some brain variables. We choose a b-spline basis expansion.\n",
     "\n",
     "However, given that our dataset is quite small, we decide to use a model with a normal likelihood (the default). An example of a more complex likelihod and its application can be found [here](https://github.com/predictive-clinical-neuroscience/PCNtoolkit-demo/blob/main/tutorials/HBR_SHASH/HBR_Tutorial.ipynb).\n",
     "\n",
@@ -503,6 +502,14 @@
     "Hence we need: (covariates, responses, batch effects) and test set (covariates, responses, batch effects). \n",
     "\n",
     "All batch effects are distributes equally across training and test set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "789c806a-e4f1-4798-8e24-a1ff8b010dd0",
+   "metadata": {},
+   "source": [
+    "## Case 1: Train the model"
    ]
   },
   {
@@ -540,7 +547,7 @@
    "id": "d20e6828-de3e-4f9b-b9ee-254fcf9e3d15",
    "metadata": {},
    "source": [
-    "## Case 1: Results"
+    "## Case 1: Load the results"
    ]
   },
   {
@@ -570,7 +577,7 @@
    "id": "9995b7e7-4a8d-43d2-a81c-7cab230b8c0e",
    "metadata": {},
    "source": [
-    "## Case 1a: Plot the results for one site.\n",
+    "## Case 1: Plot the results for one site.\n",
     "\n",
     "The results yield predictions for all 20 sites. However, let's plot just now the results and centiles for site id 8 (Cleveland).\n",
     "\n",
@@ -650,7 +657,7 @@
    "id": "496923cb-72d2-4fa9-8122-d02693e91b05",
    "metadata": {},
    "source": [
-    "## Case 1b: Add data points from site 7 (Cambridge_Buckner) into the quantile plot of site 8 (Cleveland).\n",
+    "## Case 2: Add data points from site 7 (Cambridge_Buckner) into the quantile plot of site 8 (Cleveland).\n",
     "\n",
     "1. Create a forward prediction for the covariate combination of each individual of site 7 for site 8.\n",
     "2. Use yhat and s2 to invert z score for those individuals.\n",
@@ -726,7 +733,7 @@
     }
    },
    "source": [
-    "### Load the yhat and s2 for subjects from site 7 for site 8.\n",
+    "### Case 2 Load the yhat and s2 for subjects from site 7 for site 8.\n",
     "\n",
     "Now we load the data we have just created."
    ]
@@ -829,7 +836,7 @@
     }
    },
    "source": [
-    "## Case 2: Transter model: Make predictions/adjustments for unseen sites.\n",
+    "## Case 3: Transter model: Make predictions/adjustments for unseen sites.\n",
     "\n",
     "The transfer requires an adaptation (training) and a test data set. We are going to use the held-out training data set for that.\n",
     "\n",
@@ -922,7 +929,7 @@
    "id": "fb677807-fba9-481b-80a0-fb33fd5f589d",
    "metadata": {},
    "source": [
-    "## Run the transfer\n",
+    "## Case 3: Run the transfer model\n",
     "\n",
     "We now run the transfer. We do that in a loop, running over all (two) idps we have selected."
    ]
