--- a/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
+++ b/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
@@ -21,7 +21,7 @@
    "id": "7aaac9b3-3ad6-47ee-a06f-528f7a0c0aae",
    "metadata": {},
    "source": [
-    "# Quick recap: normative modelling using the pcn toolkit\n",
+    "# Quick recap: normative modelling using the pcntoolkit\n",
     "A normative model requires three input variables:\n",
     "- covariates (the X axis, ususally age)\n",
     "- response variables (usually one or several brain feature measurements)\n",
@@ -146,9 +146,9 @@
    "id": "4639454a-4bc9-4b23-bed1-7baadfb9f3b5",
    "metadata": {},
    "source": [
-    "# Step 1: Data pre-processing.\n",
+    "# Step 1: Data pre-processing\n",
     "\n",
-    "### 1.1 Load the data.\n",
+    "### 1.1 Load the data\n",
     "\n",
     "For this tutorial, we use publicly availabe data that has been pooled from various data sets. The data have alrrady been conveniently split into training and test set."
    ]
@@ -204,7 +204,7 @@
    "id": "ce0374f4-58a1-41ee-b8fc-9a8202152b5c",
    "metadata": {},
    "source": [
-    "## 1.2 Visual inspection of the data."
+    "## 1.2 Visual inspection of the data"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "id": "21e32cf1-b2c0-4fea-beec-d3034d933086",
    "metadata": {},
    "source": [
-    "## 1.3 Setting aside of hold-out transfer sites.\n",
+    "## 1.3 Set aside of hold-out transfer sites\n",
     "For our site transfer later we want to exclude some sites from the training and test set for later. We choose the SaintLois and the COBRE site and remove them from the training and test set. We summarize those sites in a `new_sites_tr` and `new_sites_te` variable."
    ]
   },
@@ -333,7 +333,7 @@
    "id": "b3dce878-c4bb-4855-b4d0-40c28a95ee8c",
    "metadata": {},
    "source": [
-    "## 1.4 Selecting brain variables (independently derived phenotypes, IDPs).\n",
+    "## 1.4 Select brain variables (independently derived phenotypes, IDPs)\n",
     "\n",
     "Our data set contains 223 columns (phenotypes). We select two phenotypes for modelling. "
    ]
@@ -421,12 +421,12 @@
     "# Step 2: Normative modelling\n",
     "\n",
     "\n",
-    "## Case 1: Training a normative model on different sites to make predictions on the same sites (equal distribution of sites in training and test data)\n",
+    "## Case 1: Training a normative model on different sites to make predictions on the same sites (equal distribution of batches across training and test data)\n",
     "\n",
     "\n",
     "Use: Hierarchical Bayesian model (HBR)\n",
     "\n",
-    "HBR multi-batch normative modelling class. By default, this function estimates a linear model with random intercept, random slope, and random homoscedastic noise.\n",
+    "HBR multi-batch normative modelling class.\n",
     "   \n",
     "    :param X: [N×P] array of clinical covariates\n",
     "    :param y: [N×1] array of neuroimaging measures\n",
@@ -491,17 +491,17 @@
     "\n",
     "The model framework for this tutorial is the hierarchial Bayesian Regression model (HBR).\n",
     "\n",
-    "We decide for our model that we want the mean and the variance to vary with the covariate (linear_mu and linear_sigma, respectively). We choose a non-linear function for $\\phi$ given the non-linear change of age with some brain variables. We choose a b-spline basis expansion.\n",
+    "We decide for our model that we want the `mean` and the `variance` to vary with the covariate (`linear_mu` and `linear_sigma`, respectively). We choose a non-linear function for $\\phi$ given the non-linear change of age with some brain variables. We choose a b-spline basis expansion.\n",
     "\n",
     "However, given that our dataset is quite small, we decide to use a model with a normal likelihood (the default). An example of a more complex likelihod and its application can be found [here](https://github.com/predictive-clinical-neuroscience/PCNtoolkit-demo/blob/main/tutorials/HBR_SHASH/HBR_Tutorial.ipynb).\n",
     "\n",
-    "Given the many sites in the model, we want the model to be rather flexible. We choose a random intercept for $\\mu$ allowing for offests between sites. We also allow the width of the centiles to vary between sites \n",
+    "Given the many sites in the model (and for demonstration purposes), we want the model to be rather flexible and the centiles 'wiggly'. We choose a random intercept offsets and slopes for $\\mu$ and $\\sigma$. You can change these parameters to your liking and see what happens. \n",
     "\n",
     "The default version of the model always trains the model on a training set, and then makes predictions on a test set.\n",
     "\n",
-    "Hence we need: (covariates, responses, batch effects) and test set (covariates, responses, batch effects). \n",
+    "Hence we need: a full training set (covariates, responses, batch effects) and test set (covariates, responses, batch effects). \n",
     "\n",
-    "All batch effects are distributes equally across training and test set."
+    "All batch effects need to be distributed rather equally across training and test set."
    ]
   },
   {
@@ -577,15 +577,23 @@
    "id": "9995b7e7-4a8d-43d2-a81c-7cab230b8c0e",
    "metadata": {},
    "source": [
-    "## Case 1: Plot the results for one site.\n",
+    "## Case 1: Plot the results for one site\n",
     "\n",
     "The results yield predictions for all 20 sites. However, let's plot just now the results and centiles for site id 8 (Cleveland).\n",
     "\n",
-    "We can use the get_mcmc_quantiles function inherent in the normative model object for that.\n",
+    "We can use the `get_mcmc_quantiles` function inherent in the normative model object for that.\n",
     "This function requires:\n",
     "- a desired range of z-scores that the quantiles should cover\n",
     "- a desired X-axis vector (for example, from 20 years - 80 years)\n",
     "- a batch effect vector containing the desired batch effects to plot\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c3803c5-50cd-4f11-a922-84e65c5fa7b2",
+   "metadata": {},
+   "source": [
+    "## Case 1: Prepare dummy data and batch matrix"
    ]
   },
   {
@@ -615,7 +623,7 @@
    "id": "0b9edc17-37c0-4012-8622-2f2a3319c19e",
    "metadata": {},
    "source": [
-    "Get the quantiles."
+    "## Case 1: Get the quantiles"
    ]
   },
   {
@@ -657,7 +665,9 @@
    "id": "496923cb-72d2-4fa9-8122-d02693e91b05",
    "metadata": {},
    "source": [
-    "## Case 2: Add data points from site 7 (Cambridge_Buckner) into the quantile plot of site 8 (Cleveland).\n",
+    "## Case 2: Add data points from site 7 (Cambridge_Buckner) into the quantile plot of site 8 (Cleveland)\n",
+    "\n",
+    "We have now plotted the cebtiles for site 8 and plotted the raw data from site 8 in it. How can we add data from another site?\n",
     "\n",
     "1. Create a forward prediction for the covariate combination of each individual of site 7 for site 8.\n",
     "2. Use yhat and s2 to invert z score for those individuals.\n",
@@ -667,7 +677,9 @@
     "The zscores that the model produces are normalized for site. Hence, the z-socres are comparable in z-score space.\n",
     "In order to convert the data points back into different site spaces, we need to revert the z-score transformation.\n",
     "\n",
-    "$z_{s1,7} = z_8$\n",
+    "## Some (rather bad) math\n",
+    "\n",
+    "$z_{7} = z_8$\n",
     "\n",
     "$z_7 = \\frac{\\hat{y}_8 - y}{s_8}$\n",
     "\n",
@@ -733,7 +745,7 @@
     }
    },
    "source": [
-    "### Case 2 Load the yhat and s2 for subjects from site 7 for site 8.\n",
+    "## Case 2: Load the yhat and s2 for subjects from site 7 for site 8\n",
     "\n",
     "Now we load the data we have just created."
    ]
@@ -774,6 +786,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3cf7f741-5142-438e-b4b8-71c1a5da6e26",
+   "metadata": {},
+   "source": [
+    "## Case 2: Back calculation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "66f5c7cf-e3e8-4c91-a022-bdab3e9ded20",
@@ -799,6 +819,7 @@
    "id": "7c32be6f-4b12-475a-a33d-28a7bb77d4ce",
    "metadata": {},
    "source": [
+    "## Case 2: Plotting\n",
     "We now create a plot that contains the transfromed data from site 7, the original data from site 8 and the centiles from site 8."
    ]
   },
@@ -858,13 +879,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cbe2a844-d6ad-4ef7-9ab4-4b7729e29800",
+   "metadata": {},
+   "source": [
+    "## Case 3: Load the held out data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "609143a4-402a-4e84-90e0-6747ce9e68ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the hold out data.\n",
+    "# Load the held out data.\n",
     "X_adapt = (new_sites_tr['age']/100).to_numpy(dtype=float)\n",
     "Y_adapt = new_sites_tr[idps].to_numpy(dtype=float)\n",
     "batch_effects_adapt = new_sites_tr[['sitenum','sex']].to_numpy(dtype=int)\n",
