--- a/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
+++ b/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
@@ -204,7 +204,7 @@
    "id": "ce0374f4-58a1-41ee-b8fc-9a8202152b5c",
    "metadata": {},
    "source": [
-    "## 1.2 Visual inspection of the data"
+    "### 1.2 Visual inspection of the data"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "id": "21e32cf1-b2c0-4fea-beec-d3034d933086",
    "metadata": {},
    "source": [
-    "## 1.3 Set aside of hold-out transfer sites\n",
+    "### 1.3 Set aside of hold-out transfer sites\n",
     "For our site transfer later we want to exclude some sites from the training and test set for later. We choose the SaintLois and the COBRE site and remove them from the training and test set. We summarize those sites in a `new_sites_tr` and `new_sites_te` variable."
    ]
   },
@@ -333,7 +333,7 @@
    "id": "b3dce878-c4bb-4855-b4d0-40c28a95ee8c",
    "metadata": {},
    "source": [
-    "## 1.4 Select brain variables (independently derived phenotypes, IDPs)\n",
+    "### 1.4 Select brain variables (independently derived phenotypes, IDPs)\n",
     "\n",
     "Our data set contains 223 columns (phenotypes). We select two phenotypes for modelling. "
    ]
@@ -487,7 +487,7 @@
    "id": "78fa3835-d8f5-41f8-afe9-e548e3e963c5",
    "metadata": {},
    "source": [
-    "## Case 1: Selecting the model\n",
+    "### Case 1: Selecting the model\n",
     "\n",
     "The model framework for this tutorial is the hierarchial Bayesian Regression model (HBR).\n",
     "\n",
@@ -509,7 +509,7 @@
    "id": "789c806a-e4f1-4798-8e24-a1ff8b010dd0",
    "metadata": {},
    "source": [
-    "## Case 1: Train the model"
+    "### Case 1: Train the model"
    ]
   },
   {
@@ -547,7 +547,7 @@
    "id": "d20e6828-de3e-4f9b-b9ee-254fcf9e3d15",
    "metadata": {},
    "source": [
-    "## Case 1: Load the results"
+    "### Case 1: Load the results"
    ]
   },
   {
@@ -577,7 +577,7 @@
    "id": "9995b7e7-4a8d-43d2-a81c-7cab230b8c0e",
    "metadata": {},
    "source": [
-    "## Case 1: Plot the results for one site\n",
+    "### Case 1: Plot the results for one site\n",
     "\n",
     "The results yield predictions for all 20 sites. However, let's plot just now the results and centiles for site id 8 (Cleveland).\n",
     "\n",
@@ -593,7 +593,7 @@
    "id": "5c3803c5-50cd-4f11-a922-84e65c5fa7b2",
    "metadata": {},
    "source": [
-    "## Case 1: Prepare dummy data and batch matrix"
+    "### Case 1: Prepare dummy data and batch matrix"
    ]
   },
   {
@@ -623,7 +623,7 @@
    "id": "0b9edc17-37c0-4012-8622-2f2a3319c19e",
    "metadata": {},
    "source": [
-    "## Case 1: Get the quantiles"
+    "### Case 1: Get the quantiles"
    ]
   },
   {
@@ -677,7 +677,7 @@
     "The zscores that the model produces are normalized for site. Hence, the z-socres are comparable in z-score space.\n",
     "In order to convert the data points back into different site spaces, we need to revert the z-score transformation.\n",
     "\n",
-    "## Some (rather bad) math\n",
+    "### Some (rather bad) math\n",
     "\n",
     "$z_{7} = z_8$\n",
     "\n",
@@ -745,7 +745,7 @@
     }
    },
    "source": [
-    "## Case 2: Load the yhat and s2 for subjects from site 7 for site 8\n",
+    "### Case 2: Load the yhat and s2 for subjects from site 7 for site 8\n",
     "\n",
     "Now we load the data we have just created."
    ]
@@ -790,7 +790,7 @@
    "id": "3cf7f741-5142-438e-b4b8-71c1a5da6e26",
    "metadata": {},
    "source": [
-    "## Case 2: Back calculation"
+    "### Case 2: Back calculation"
    ]
   },
   {
@@ -819,7 +819,7 @@
    "id": "7c32be6f-4b12-475a-a33d-28a7bb77d4ce",
    "metadata": {},
    "source": [
-    "## Case 2: Plotting\n",
+    "### Case 2: Plotting\n",
     "We now create a plot that contains the transfromed data from site 7, the original data from site 8 and the centiles from site 8."
    ]
   },
@@ -883,7 +883,7 @@
    "id": "cbe2a844-d6ad-4ef7-9ab4-4b7729e29800",
    "metadata": {},
    "source": [
-    "## Case 3: Load the held out data"
+    "### Case 3: Load the held out data"
    ]
   },
   {
@@ -958,7 +958,7 @@
    "id": "fb677807-fba9-481b-80a0-fb33fd5f589d",
    "metadata": {},
    "source": [
-    "## Case 3: Run the transfer model\n",
+    "### Case 3: Run the transfer model\n",
     "\n",
     "We now run the transfer. We do that in a loop, running over all (two) idps we have selected."
    ]
