--- a/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
+++ b/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
@@ -491,17 +491,16 @@
     "\n",
     "The model framework for this tutorial is the hierarchial Bayesian Regression model (HBR).\n",
     "\n",
-    "We decide for our model that we want the `mean` and the `variance` to vary with the covariate (`linear_mu` and `linear_sigma`, respectively). We choose a non-linear function for $\\phi$ given the non-linear change of age with some brain variables. We choose a b-spline basis expansion.\n",
+    "#### Choices we make for the model:\n",
+    "- We decide for our model that we want the `mean` and the `variance` to vary with the covariate (`linear_mu` and `linear_sigma`, respectively). We choose a non-linear function for $\\phi$ given the non-linear change of age with some brain variables. We choose a b-spline basis expansion.\n",
     "\n",
-    "However, given that our dataset is quite small, we decide to use a model with a normal likelihood (the default). An example of a more complex likelihod and its application can be found [here](https://github.com/predictive-clinical-neuroscience/PCNtoolkit-demo/blob/main/tutorials/HBR_SHASH/HBR_Tutorial.ipynb).\n",
+    "- However, given that our dataset is quite small, we decide to use a model with a normal likelihood (the default). An example of a more complex likelihod and its application can be found [here](https://github.com/predictive-clinical-neuroscience/PCNtoolkit-demo/blob/main/tutorials/HBR_SHASH/HBR_Tutorial.ipynb).\n",
     "\n",
-    "Given the many sites in the model (and for demonstration purposes), we want the model to be rather flexible and the centiles 'wiggly'. We choose a random intercept offsets and slopes for $\\mu$ and $\\sigma$. You can change these parameters to your liking and see what happens. \n",
+    "- Given the many sites in the model (and for demonstration purposes), we want the model to be rather flexible and the centiles 'wiggly'. We choose a random intercept offsets and slopes for $\\mu$ and $\\sigma$. You can change these parameters to your liking and see what happens. \n",
     "\n",
-    "The default version of the model always trains the model on a training set, and then makes predictions on a test set.\n",
-    "\n",
-    "Hence we need: a full training set (covariates, responses, batch effects) and test set (covariates, responses, batch effects). \n",
-    "\n",
-    "All batch effects need to be distributed rather equally across training and test set."
+    "#### Files required:\n",
+    "- The default version of the model always trains the model on a training set, and then makes predictions on a test set.\n",
+    "- Hence we need: a full training set (covariates, responses, batch effects) and test set (covariates, responses, batch effects). All batch effects need to be distributed rather equally across training and test set."
    ]
   },
   {
