--- a/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
+++ b/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
@@ -668,7 +668,7 @@
     "\n",
     "We have now plotted the cebtiles for site 8 and plotted the raw data from site 8 in it. How can we add data from another site?\n",
     "\n",
-    "1. Create a forward prediction for the covariate combination of each individual of site 7 for site 8.\n",
+    "1. Create a forward prediction for the covariate combination of each individual for site 7 for site 8.\n",
     "2. Use yhat and s2 to invert z score for those individuals.\n",
     "\n",
     "Rationale:\n",
@@ -676,13 +676,13 @@
     "The zscores that the model produces are normalized for site. Hence, the z-socres are comparable in z-score space.\n",
     "In order to convert the data points back into different site spaces, we need to revert the z-score transformation.\n",
     "\n",
-    "### Some (rather bad) math\n",
+    "### Some (rather informal) math\n",
     "\n",
     "$z_{7} = z_8$\n",
     "\n",
-    "$z_7 = \\frac{\\hat{y}_8 - y}{s_8}$\n",
+    "$z_7 = \\frac{\\hat{y}_8 - y_*}{s_8}$\n",
     "\n",
-    "$z_7 * s_8 - \\hat{y_8} = -y$"
+    "$z_7 * s_8 - \\hat{y_8} = -y_*$"
    ]
   },
   {
