--- a/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
+++ b/slot5_Bayer/03_HBR_site_effects_normative_modelling.ipynb
@@ -260,9 +260,7 @@
     "df_tr['sitenum'] = 0\n",
     "for i,s in enumerate(sites):\n",
     "    idx = df_tr['site'] == s\n",
-    "    df_tr['sitenum'].loc[idx] = i\n",
-    "\n",
-    "    print('site',s, sum(idx))"
+    "    df_tr['sitenum'].loc[idx] = i"
    ]
   },
   {
@@ -275,9 +273,7 @@
     "df_te['sitenum'] = 0\n",
     "for i,s in enumerate(sites):\n",
     "    idx = df_te['site'] == s\n",
-    "    df_te['sitenum'].loc[idx] = i\n",
-    "\n",
-    "    print('site',s, sum(idx))"
+    "    df_te['sitenum'].loc[idx] = i"
    ]
   },
   {
